# meetly

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts  voice-overlay.html
.github/actions/apple_cert/: action.yaml
.github/actions/macos_notarize_dmg/: action.yaml
.github/workflows/: release-macos.yml
docs/: AGENT_WAKE_STRATEGY.md  ANARLOG_MULTI_PROVIDER_RESEARCH.md  ARCHITECTURE_PATTERNS.md  FLOATING_ISLAND_DESIGN.md  MVP_DELIVERY_PLAN.md  PLUELY_STYLE_SPEC.md  PRD.md  PROACTIVE_COACH_BEHAVIOR.md  PROACTIVE_COACH_RUNTIME_DESIGN.md  PRODUCT_ROADMAP.md  PROJECT_RULES.md  PROVIDER_ARCHITECTURE.md  REFERENCE_PROJECTS.md  RUST_AGENT_WAKE_RUNTIME_DESIGN.md  STEALTH_AND_SCREEN_CAPTURE.md  STT_PROVIDERS.md  TECHNICAL_DESIGN.md  UX_FOCUS_REVIEW.md  VOICE_DICTATION_RESEARCH.md  VOICE_DICTATION_RUNTIME_DESIGN.md
openspec/: project.md
openspec/changes/add-audio-capture-status/: design.md  proposal.md  tasks.md
openspec/changes/add-coach-wake-policy/: design.md  proposal.md  tasks.md
openspec/changes/add-configurable-agent-web-search/: design.md  proposal.md  tasks.md
openspec/changes/add-dual-channel-meeting-capture/: design.md  proposal.md  tasks.md
public/: pcm-worklet.js
scripts/: replay-coach-wake-policy.ts  replay-latest-coach-log.ts  simulate-interview-flow.mjs  test-agent-chat.ts  test-agent-runtime-races.ts  test-coach-journal.ts  test-coach-timeout.ts  test-dictation-state.ts  test-meeting-agent.ts  test-microphone-clip.ts  test-session-audio.ts  test-voice-ask-state.ts  test-voice-overlay-presentation.ts  verify-macos-test-bundle.sh
src/: App.tsx  SettingsApp.tsx  VoiceOverlayApp.tsx  settings-main.tsx  styles.css  useMicAsk.ts  voice-overlay-main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  audio.rs  coach_event_log.rs  debug_log.rs  lib.rs  main.rs  menu_bar.rs  window.rs
src-tauri/src/app/: agent_tool_loop.rs  assistant_service.rs  coach_agent.rs  document_service.rs  mod.rs  prompt_orchestrator.rs  report_service.rs  voice_agent.rs
src-tauri/src/audio/: microphone.rs  mod.rs  transcript_buffer.rs  vad.rs  wav.rs
src-tauri/src/audio/speaker/: async_ring.rs  macos.rs  mod.rs  rt_ring.rs
src-tauri/src/dictation/: mod.rs  output.rs  polish.rs  selected_text.rs  settings.rs  shortcut.rs  target.rs
src-tauri/src/domain/: assistant.rs
src-tauri/src/providers/: commands.rs  config.rs  credentials.rs  dev_env.rs  error.rs  mod.rs  secrets.rs  storage.rs  web.rs
src-tauri/src/providers/llm/: mod.rs  openai_compatible.rs
src-tauri/src/providers/stt/: audio_normalization.rs  mimo.rs  mod.rs  openai_compatible.rs
src/app/: agentChat.ts  coachWakePolicy.ts  constants.ts  contextDocuments.ts  interviewLogic.ts  microphoneClip.ts  platform.ts  reporting.ts  sessionAudio.ts  types.ts  useAgentRuntime.ts  useAssistantAsk.ts  useAutoAssist.ts  useMeetlyState.ts  useMicMeeting.ts  usePiCoach.ts  useSessionActions.ts  useTauriEvents.ts  useWindowActions.tsx
src/app/dictation/: output.ts  (+3 more)
src/components/: AgentWorkspace.tsx  AssistantPreview.tsx  AudioBars.tsx
src/runtime/: piObserver.ts
src/settings/: OnboardingPanel.tsx  UpdateSection.tsx
(+58 files in other folders)
