[package]
name = "meetly"
version = "0.1.3"
description = "A local-first meeting assistant MVP."
authors = ["Meetly"]
edition = "2021"

[lib]
name = "meetly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
dirs = "5"
dotenvy = "0.15"
futures-util = "0.3"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
ringbuf = "0.4"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = "0.11"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
